CSS DONE correctly

--- a/styling practce.html
+++ b/styling practce.html
@@ -2,34 +2,13 @@
 <html>
 <head>
 <style> 
-#example1 {
-  position: relative;
-  width: 500px;
-  height: 700px;
-  left: 700px;
-  top: 100px;
-  border: 3px solid green;
-}
-button {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
+
+
 
 </style>
 </head>
 <body>
-<div id="example1">
+iiaA[[[4  E===-0987654321POIUY  BBbbBBbBbbBGGgGGGG                       <div id="example1">
 <h1 style= "position:absolute;left: 20px;">TASK TRACKER</h1>
 <button>Click</button>
 
@@ -41,3 +20,7 @@ button {
   </div>
 </body>
 </html>
+
+
+
+    KII
